# Login_Registration_Program

./: .gitignore  .gitmodules  CMakeLists.txt  Logger.cpp  Login_Registration_Program.sln  README.md  main.cpp
include/: InputValidation.h  Logger.h  UserAccount.h
src/: InputValidation.cpp  UserAccount.cpp  main.cpp
